deployment/kubernetes/server.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dasher-server-sfs
spec:
  selector:
    matchLabels:
      app: dasher-server
  serviceName: "nginx"
  replicas: 1
  template:
    metadata:
      labels:
        app: dasher-server
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: dasher-server
        image: ghcr.io/flohansen/dasher-server:latest
        ports:
        - containerPort: 3000
          name: web
        - containerPort: 50051
          name: grpc
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi
