deployment/kubernetes/server.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dasher-server-service
spec:
  clusterIP: None
  selector:
    app: dasher-server
  ports:
    - name: web
      port: 3000
      protocol: TCP
    - name: grpc
      port: 50051
      protocol: TCP
