deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dasher-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - backend:
            service:
              name: dasher-web-service
              port:
                name: web
          path: /
          pathType: Prefix
        - backend:
            service:
              name: dasher-server-service
              port:
                name: web
          path: /api
          pathType: Prefix
